--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-gauge-chart": "^0.7.2",
     "ngx-mqtt": "^6.13.2",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
